# chislaki

./: CMakeLists.txt  README.html  README.md
include/: matrix.hpp
include/chislaki/linalg/: decompositions.hpp  matrix.hpp  utility.hpp
include/chislaki/matan/: differentiation.hpp  interpolation.hpp  intеgration.hpp
include/chislaki/optimize/: minimize.hpp
include/chislaki/transcendental/: utility.hpp
reports/lab01/: report.tex
reports/lab02/: figure1.py  figure2.py  report.tex  solution.py
reports/lab03/: ols.py  report.tex
src/: main.cpp
tests/: chislaki-lab01-1.cpp  chislaki-lab01-3.cpp  chislaki-lab01-4.cpp  chislaki-lab01-5.cpp  chislaki-lab01.cpp
tests/chislaki-lab01/: t1_v02.txt  t1_v20.txt  t2_v02.txt  t2_v20.txt  t3_v01.txt  t4_v00.txt  t4_v02.txt  t5_v01.txt  t5_v02.txt  t5_v03.txt  t5_v04.txt
tests/chislaki-lab01/src/: chislaki-lab01-1.cpp  chislaki-lab01-2.cpp
tests/chislaki-lab01/tests/: t2_v03.txt  t3_v02.txt  t3_v03.txt  t3_v20.txt  t4_v01.txt  t4_v03.txt  t4_v20.txt  t5_v00.txt
tests/chislaki-lab02/: chislaki-lab02-1.cpp
tests/chislaki-lab02/src/: chislaki-lab02-2.cpp
tests/chislaki-lab03/src/: chislaki-lab03-1.cpp  chislaki-lab03-2.cpp  chislaki-lab03-3.cpp  chislaki-lab03-4.cpp  chislaki-lab03-5.cpp
tests/chislaki-lab03/tests/: t2_v00.txt  t2_v01.txt  t3_v00.txt  t3_v01.txt  t4_v00.txt
